--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-    config.vm.box = "boxomatic/centos-stream-9"
+    config.vm.box = "centos-stream9"
 
     config.vm.provider "virtualbox" do |vb|
         vb.memory = 1024
@@ -14,14 +14,14 @@ Vagrant.configure("2") do |config|
 #             vb.cpus = 1
         end
     end
-
-    config.vm.define "swquincSW" do |sw|
-        sw.vm.hostname = "swquincSW"
-        sw.vm.provider "virtualbox" do |vb|
-            vb.name = "swquincSW"
-#             vb.memory = 1024
-#             vb.cpus = 1
-        end
-    end
+#
+#     config.vm.define "swquincSW" do |sw|
+#         sw.vm.hostname = "swquincSW"
+#         sw.vm.provider "virtualbox" do |vb|
+#             vb.name = "swquincSW"
+# #             vb.memory = 1024
+# #             vb.cpus = 1
+#         end
+#     end
 
 end
