--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,26 +1,34 @@
+USERNAME = 'swquinc'
+CONTROLLER_IP = '192.168.42.110'
+AGENT_IP = '192.168.42.111'
+
+VM_RAM = 1024
+VM_CPU = 1
+CENTOS_STREAM_9 = '../boxes/CentOS-Stream-Vagrant-9.box'
+
 Vagrant.configure("2") do |config|
-    config.vm.box = "centos-stream9"
+    config.vm.box = CENTOS_STREAM_9
+    config.vm.provision "shell", inline: "sudo yum -y install go"
 
     config.vm.provider "virtualbox" do |vb|
-        vb.memory = 1024
-        vb.cpus = 1
+        vb.memory = VM_RAM
+        vb.cpus = VM_CPU
     end
 
-    config.vm.define "swquincS" do |s|
-        s.vm.hostname = "swquincS"
+    config.vm.define "#{USERNAME}S" do |s|
+        s.vm.hostname = "#{USERNAME}S"
+        config.vm.network "public_network", ip: CONTROLLER_IP
         s.vm.provider "virtualbox" do |vb|
-            vb.name = "swquincS"
-#             vb.memory = 1024
-#             vb.cpus = 1
+            vb.name = "#{USERNAME}S"
         end
     end
-#
-#     config.vm.define "swquincSW" do |sw|
-#         sw.vm.hostname = "swquincSW"
+
+#     config.vm.define "#{USERNAME}SW" do |sw|
+#         sw.vm.hostname = "#{USERNAME}SW"
+#         config.vm.network "public_network", ip: AGENT_IP
+#         config.vm.network "forwarded_port", guest: 22, host: 2223
 #         sw.vm.provider "virtualbox" do |vb|
-#             vb.name = "swquincSW"
-# #             vb.memory = 1024
-# #             vb.cpus = 1
+#             vb.name = "#{USERNAME}SW"
 #         end
 #     end
 
