--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,14 +1,22 @@
 USERNAME = 'swquinc'
-CONTROLLER_IP = '192.168.42.110'
-AGENT_IP = '192.168.42.111'
+SERVER_IP = '192.168.42.110'
+WORKER_IP = '192.168.42.111'
 
 VM_RAM = 1024
-VM_CPU = 1
+VM_CPU = 2
 CENTOS_STREAM_9 = '../boxes/CentOS-Stream-Vagrant-9.box'
+
+SSH_PUBLIC_KEY_PATH = '~/vagrant/id_rsa.pub'
+SCRIPT_PATH = '~/vagrant/install.go'
+CONTROLLER_CONFIG_PATH = '~/vagrant/k3s_controller.yaml'
+AGENT_CONFIG_PATH = '~/vagrant/k3s_agent.yaml'
 
 Vagrant.configure("2") do |config|
     config.vm.box = CENTOS_STREAM_9
     config.vm.provision "shell", inline: "sudo yum -y install go"
+    config.vm.provision "shell", inline: "sudo systemctl stop firewalld"
+    config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: SSH_PUBLIC_KEY_PATH
+    config.vm.provision "file", source: "./scripts/install.go", destination: SCRIPT_PATH
 
     config.vm.provider "virtualbox" do |vb|
         vb.memory = VM_RAM
@@ -17,7 +25,9 @@ Vagrant.configure("2") do |config|
 
     config.vm.define "#{USERNAME}S" do |s|
         s.vm.hostname = "#{USERNAME}S"
-        config.vm.network "public_network", ip: CONTROLLER_IP
+        s.vm.provision "file", source: "./confs/k3s_controller.yaml", destination: CONTROLLER_CONFIG_PATH
+        s.vm.provision "shell", inline: "sudo go run #{SCRIPT_PATH} server #{SSH_PUBLIC_KEY_PATH} #{CONTROLLER_CONFIG_PATH}"
+        s.vm.network "public_network", ip: SERVER_IP
         s.vm.provider "virtualbox" do |vb|
             vb.name = "#{USERNAME}S"
         end
@@ -25,8 +35,9 @@ Vagrant.configure("2") do |config|
 
 #     config.vm.define "#{USERNAME}SW" do |sw|
 #         sw.vm.hostname = "#{USERNAME}SW"
-#         config.vm.network "public_network", ip: AGENT_IP
-#         config.vm.network "forwarded_port", guest: 22, host: 2223
+#         sw.vm.provision "file", source: "./confs/k3s_agent.yaml", destination: AGENT_CONFIG_PATH
+#         sw.vm.provision "shell", inline: "sudo go run #{SCRIPT_PATH} agent #{SSH_PUBLIC_KEY_PATH} #{AGENT_CONFIG_PATH}"
+#         sw.vm.network "public_network", ip: WORKER_IP
 #         sw.vm.provider "virtualbox" do |vb|
 #             vb.name = "#{USERNAME}SW"
 #         end
