--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
     config.vm.provision "shell", inline: "sudo yum -y install go"
     config.vm.provision "shell", inline: "sudo systemctl stop firewalld"
 #     config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: SSH_PUBLIC_KEY_PATH
-#     config.vbguest.installer_options = { allow_kernel_upgrade: true }
+    config.vbguest.installer_options = { allow_kernel_upgrade: true }
     config.vm.boot_timeout = 1500
 
     config.vm.provider "virtualbox" do |vb|
