--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -23,7 +23,7 @@ Vagrant.configure("2") do |config|
         vb.cpus = VM_CPU
 #         vb.gui = false
         vb.customize ["modifyvm", :id, "--graphicscontroller", "vmsvga"]
-#         vb.customize ["modifyvm", :id, "--paravirtprovider", "legacy"]
+        vb.customize ["modifyvm", :id, "--paravirtprovider", "kvm"]
     end
 
     config.vm.define "#{USERNAME}S" do |s|
