--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -22,6 +22,7 @@ Vagrant.configure("2") do |config|
         vb.memory = VM_RAM
         vb.cpus = VM_CPU
         vb.customize ["modifyvm", :id, "--graphicscontroller", "vmsvga"]
+        vb.customize ["modifyvm", :id, "--paravirtprovider", "legacy"]
     end
 
     config.vm.define "#{USERNAME}S" do |s|
