--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -15,9 +15,14 @@ Vagrant.configure("2") do |config|
     config.vm.box = CENTOS_STREAM_9
     config.vm.provision "shell", inline: "sudo yum -y install go"
     config.vm.provision "shell", inline: "sudo systemctl stop firewalld"
-#     config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: SSH_PUBLIC_KEY_PATH
+    
     config.vm.boot_timeout = 1500
-
+    #ssh
+    # config.ssh.insert_key = true
+    config.ssh.keys_only = false
+    # config.ssh.private_key_path = ["~/.ssh/id_rsa", "~/.vagrant.d/insecure_private_key"]
+    config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
+    
     config.vm.provider "virtualbox" do |vb|
         vb.memory = VM_RAM
         vb.cpus = VM_CPU
