--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -18,7 +18,7 @@ Vagrant.configure("2") do |config|
     
     config.vm.boot_timeout = 1500
     #ssh
-    # config.ssh.insert_key = true
+    # config.ssh.insert_key = false
     config.ssh.keys_only = false
     # config.ssh.private_key_path = ["~/.ssh/id_rsa", "~/.vagrant.d/insecure_private_key"]
     config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
