--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -2,33 +2,24 @@ USERNAME = 'swquinc'
 SERVER_IP = '192.168.42.110'
 WORKER_IP = '192.168.42.111'
 
-VM_RAM = 2048
+VM_RAM = 1024
 VM_CPU = 1
-CENTOS_STREAM_9 = '../boxes/CentOS-Stream-Vagrant-9-latest.box'
-
-SSH_PUBLIC_KEY_PATH = '/vagrant/id_rsa.pub'
-SCRIPT_PATH = '/vagrant/scripts/install.go'
-CONTROLLER_CONFIG_PATH = '/vagrant/confs/k3s_controller.yaml'
-AGENT_CONFIG_PATH = '/vagrant/confs/k3s_agent.yaml'
+CENTOS_STREAM_9 = '../boxes/CentOS-Stream-Vagrant-9-20211111.1.x86_64.vagrant-virtualbox.box'
 
 Vagrant.configure("2") do |config|
     config.vm.box = CENTOS_STREAM_9
-    config.vm.provision "shell", inline: "sudo yum -y install go"
-    config.vm.provision "shell", inline: "sudo systemctl stop firewalld"
-#     config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: SSH_PUBLIC_KEY_PATH
     config.vm.boot_timeout = 1500
-
     config.vm.provider "virtualbox" do |vb|
         vb.memory = VM_RAM
         vb.cpus = VM_CPU
-        vb.customize ["modifyvm", :id, "--graphicscontroller", "vmsvga"]
-        vb.customize ["modifyvm", :id, "--paravirtprovider", "legacy"]
+		vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+		vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     end
 
     config.vm.define "#{USERNAME}S" do |s|
         s.vm.hostname = "#{USERNAME}S"
-        s.vm.provision "shell", inline: "sudo go run #{SCRIPT_PATH} server #{SSH_PUBLIC_KEY_PATH} #{CONTROLLER_CONFIG_PATH}"
-        s.vm.network "public_network", ip: SERVER_IP
+        s.vm.network "private_network", ip: SERVER_IP
+		s.vm.provision "shell", inline: "sudo curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION=v1.22.0-rc1 INSTALL_K3S_EXEC='--token 12345' sudo sh -s -"
         s.vm.provider "virtualbox" do |vb|
             vb.name = "#{USERNAME}S"
         end
@@ -36,8 +27,8 @@ Vagrant.configure("2") do |config|
 
     config.vm.define "#{USERNAME}SW" do |sw|
         sw.vm.hostname = "#{USERNAME}SW"
-        sw.vm.provision "shell", inline: "sudo go run #{SCRIPT_PATH} agent #{SSH_PUBLIC_KEY_PATH} #{AGENT_CONFIG_PATH}"
-        sw.vm.network "public_network", ip: WORKER_IP
+        sw.vm.network "private_network", ip: WORKER_IP
+		sw.vm.provision "shell", inline: "curl -sfL https://get.k3s.io | K3S_URL=https://192.168.42.110:6443 K3S_TOKEN=12345 sh -"
         sw.vm.provider "virtualbox" do |vb|
             vb.name = "#{USERNAME}SW"
         end
